user-microservice-rabbitmq

--- a/user-microservice/src/main/resources/application.yml
+++ b/user-microservice/src/main/resources/application.yml
@@ -24,6 +24,8 @@ rabbitmq:
     name: tasksExchange
 
 user:
+  tasksResponse:
+    queue: getUserTasksResponse
   existence:
     queue: userExistence
     response:
