--- a/tasks-microservice/src/main/resources/application.yml
+++ b/tasks-microservice/src/main/resources/application.yml
@@ -35,7 +35,8 @@ user:
     response:
       queue: getUserTasksResponse
     routingKey: getUserTasksRoutingKey
-
+  tasksResponse:
+    queue : getUserTasksResponse
 server:
   port: 8082
 
